# esp32-s3-sim7670g-4g

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: AIS.cpp  AIS.h  CMakeLists.txt  ESP32_SIM7670X_AIS.cpp  Kconfig.projbuild  idf_component.yml  nmea_parser.c  nmea_parser.h
